[package]
name = "pb-bin"
description = "Simple tool to GET and POST documents to a bin"
version = "0.2.0"
authors = ["jay"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0", features = ["derive"] }
isahc = "1.7.2"
